# packaging-lecture

./: .gitignore  README.md
imgsaver/: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
imgsaver/imgsaver/: __init__.py  __main__.py  cli.py  imgsaver.py
imgsaver/tests/: test_get_image_name_from_url.py  test_get_image_urls_from_html.py
imgsaver/tests/assets/: simple.html
package/: setup.cfg  tox.ini
package/imgsaver/: imgsaver.py
slides/: index.html  notes.txt
