[metadata]
name = imgsaver
version = 0.1.3
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
packages = find:
install_requires =
	beautifulsoup4
    requests

[options.entry_points]
console_scripts =
    download_images = imgsaver.cli:download_images